--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "inquirer": "^8.2.4",
+    "inquirer": "^8.2.6",
     "pg": "^8.11.3"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/inquirer": "^9.0.7",
     "@types/pg": "^8.11.6",
-    "typescript": "^5.2.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3"
   }
 }
