--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,8 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
-    "rootDir": "src",
-    "outDir": "dist",
+    "rootDir": "./",
+    "outDir": "./dist",
 
     /* Bundler mode */
     "moduleResolution": "bundler",
