--- a/package.json
+++ b/package.json
@@ -1,26 +1,25 @@
 {
-  "name": "sql-employeetracker",
+  "name": "employee_tracker_sql",
   "version": "1.0.0",
-  "description": "",
-  "type": "module",
-  "main": "server.js",
+  "main": "dist/server.js",
   "scripts": {
-    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
     "start": "node dist/server.js"
   },
-  "dependencies": {
-    "dotenv": "^16.4.5",
-    "inquirer": "^8.2.6",
-    "pg": "^8.11.3"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Eddy Howell",
+  "license": "MIT",
+  "description": " A terminal-based application for managing departments, roles, and employees.",
   "devDependencies": {
+    "@types/dotenv": "^6.1.1",
     "@types/inquirer": "^9.0.7",
-    "@types/pg": "^8.11.6",
-    "ts-node": "^10.9.2",
+    "@types/pg": "^8.11.11",
     "typescript": "^5.7.3"
+  },
+  "type" : "module",
+  "dependencies": {
+    "dotenv": "^16.4.7",
+    "inquirer": "^12.4.2",
+    "pg": "^8.13.3"
   }
 }
