--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "employee_tracker_sql",
   "version": "1.0.0",
-  "main": "dist/server.js",
+  "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
@@ -16,10 +16,11 @@
     "@types/pg": "^8.11.11",
     "typescript": "^5.7.3"
   },
-  "type" : "module",
+  "type": "module",
   "dependencies": {
     "dotenv": "^16.4.7",
     "inquirer": "^12.4.2",
-    "pg": "^8.13.3"
+    "pg": "^8.13.3",
+    "rxjs": "^7.8.2"
   }
 }
